fixed scrollbar, removed unusded files

--- a/public/sass/_chat_admin.scss
+++ b/public/sass/_chat_admin.scss
@@ -74,6 +74,16 @@
     }
   }
 
+  .chat-body::-webkit-scrollbar {
+    border-radius: 10px;
+    width: 7px;
+  }
+
+  .chat-body::-webkit-scrollbar-thumb {
+    background: #b8b8b8;
+    border-radius: 10px;
+  }
+
   .chat-body {
     flex-grow: 1;
     width: 100%;
